--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
   mat-drawer {
     width: 15em;
     min-width: 5em;
-    background: #012a5b;
+    background: #3f51b5; //#012a5b;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
