--- a/src/app/components/left-menu/left-menu.component.html
+++ b/src/app/components/left-menu/left-menu.component.html
@@ -1,8 +1,8 @@
 <mat-nav-list>
   <mat-list-item>
     <button mat-icon-button>
-      <mat-icon>house</mat-icon>
+      <mat-icon>book</mat-icon>
     </button>
-    <a *ngIf="leftMenuService.opened" matListItemTitle>Golivna</a>
+    <a *ngIf="leftMenuService.opened" matListItemTitle>Книжки</a>
   </mat-list-item>
 </mat-nav-list>
