--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -5,5 +5,5 @@
     [matTooltip]="'Головне меню'">
       <mat-icon>menu</mat-icon>
   </button>
-  <h1>Бібліотека</h1>
+  <div class="MainBrand">Бібліотека</div>
 </mat-toolbar>
