--- a/src/app/components/left-menu/left-menu.component.html
+++ b/src/app/components/left-menu/left-menu.component.html
@@ -5,4 +5,11 @@
     </button>
     <a *ngIf="leftMenuService.opened" matListItemTitle>Книжки</a>
   </mat-list-item>
+
+  <mat-list-item>
+    <button mat-icon-button>
+      <mat-icon>tu-tu</mat-icon>
+    </button>
+    <a *ngIf="leftMenuService.opened" matListItemTitle>Налаштування</a>
+  </mat-list-item>
 </mat-nav-list>
