--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .main-drawer {
   height: 100vh;
   mat-drawer {
-    width: 15em;
+    width: 240px;
     min-width: 5em;
-    background: #3f51b5; //#012a5b;
+    background: white; //#3f51b5; //#012a5b;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
