--- a/src/app/components/left-menu/left-menu.component.html
+++ b/src/app/components/left-menu/left-menu.component.html
@@ -1,10 +1,8 @@
 <mat-nav-list>
-  <mat-list-item>
-    <button mat-icon-button>
-      <mat-icon>book</mat-icon>
-    </button>
-    <a *ngIf="leftMenuService.opened" matListItemTitle>Книжки</a>
-  </mat-list-item>
+  <a mat-list-item>
+    <mat-icon>book</mat-icon>
+    <span *ngIf="leftMenuService.opened" matLine >Книжки</span>
+  </a>
 
   <mat-list-item>
     <button mat-icon-button>
