--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -7,7 +7,8 @@
   </button>
   <div class="MainBrand">Бібліотека</div>
 
-  <mat-form-field appearance="outline" class="SearchInputField">
-    <input matInput/>
+  <mat-form-field appearance="outline" style="height: 3em">
+    <input matInput placeholder="Search"/>
+    <mat-icon matPrefix>search</mat-icon>
   </mat-form-field>
 </mat-toolbar>
