--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -1,3 +1,16 @@
+:host ::ng-deep .mdc-text-field--outlined {
+  --mdc-outlined-text-field-container-shape: 28px;
+  min-height: 3em;
+}
+:host ::ng-deep .mat-mdc-form-field-flex {
+  min-height: 3em;
+  height:3em;
+}
+:host ::ng-deep .mat-mdc-form-field-infix {
+  min-height: 3em;
+  height:3em;
+}
+
 .TopToolBar {
   display: flex;
   align-items: center; /* Center items vertically */
