--- a/src/app/components/left-menu/left-menu.component.html
+++ b/src/app/components/left-menu/left-menu.component.html
@@ -1,8 +1,10 @@
 <mat-nav-list>
-  <a mat-list-item>
-    <mat-icon>book</mat-icon>
-    <span *ngIf="leftMenuService.opened" matLine >Книжки</span>
-  </a>
+  <div class="container1">
+    <a mat-list-item>
+      <mat-icon>library_books</mat-icon>
+      <span *ngIf="leftMenuService.opened" matLine >Книжки</span>
+    </a>
+  </div>
 
   <mat-list-item>
     <button mat-icon-button>
