--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,14 +1,19 @@
 <mat-toolbar class="TopToolBar">
+
   <button mat-icon-button
     aria-label="Menu icon"
     (click)="leftMenuService.toggle()"
     [matTooltip]="'Головне меню'">
       <mat-icon>menu</mat-icon>
   </button>
+
   <div class="MainBrand">Бібліотека</div>
 
-  <mat-form-field appearance="outline" style="height: 3em">
-    <input matInput placeholder="Search"/>
+  <mat-form-field appearance="outline" class="SearchInputField"
+                  style="--mdc-outlined-text-field-container-shape: 28px">
+    <mat-label>Пошук книжок у бібліотеці</mat-label>
+    <input matInput placeholder="">
     <mat-icon matPrefix>search</mat-icon>
   </mat-form-field>
+
 </mat-toolbar>
