--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -1,15 +1,15 @@
-:host ::ng-deep .mdc-text-field--outlined {
-  --mdc-outlined-text-field-container-shape: 28px;
-  min-height: 3em;
-}
-:host ::ng-deep .mat-mdc-form-field-flex {
-  min-height: 3em;
-  height:3em;
-}
-:host ::ng-deep .mat-mdc-form-field-infix {
-  min-height: 3em;
-  height:3em;
-}
+//:host ::ng-deep .mdc-text-field--outlined {
+//  --mdc-outlined-text-field-container-shape: 28px;
+//  min-height: 3em;
+//}
+//:host ::ng-deep .mat-mdc-form-field-flex {
+//  min-height: 3em;
+//  height:3em;
+//}
+//:host ::ng-deep .mat-mdc-form-field-infix {
+//  min-height: 3em;
+//  height:3em;
+//}
 
 .TopToolBar {
   display: flex;
@@ -23,8 +23,12 @@
 }
 
 .SearchInputField {
-  height: 26px;
-  padding-left: 10px;
-  padding-right: 10px;
-  width: 400px;
+  height: 60px;
+  padding: 0.5em;
+  width: 25em;
+  border-radius: 0.5em;
+}
+
+.mdc-text-field--outlined {
+  --mdc-outlined-text-field-container-shape: 28px !important;
 }
