--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -12,7 +12,7 @@
   <mat-form-field appearance="outline" class="SearchInputField"
                   style="--mdc-outlined-text-field-container-shape: 28px">
     <mat-label>Пошук книжок у бібліотеці</mat-label>
-    <input matInput placeholder="">
+    <input style="display: flex; justify-content: center" matInput placeholder="">
     <mat-icon matPrefix>search</mat-icon>
   </mat-form-field>
 
