--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -9,10 +9,9 @@
 
   <div class="MainBrand">Бібліотека</div>
 
-  <mat-form-field appearance="outline" class="SearchInputField"
-                  style="--mdc-outlined-text-field-container-shape: 28px">
+  <mat-form-field appearance="outline" class="SearchInputField">
     <mat-label>Пошук книжок у бібліотеці</mat-label>
-    <input style="display: flex; justify-content: center" matInput placeholder="">
+    <input matInput placeholder="">
     <mat-icon matPrefix>search</mat-icon>
   </mat-form-field>
 
