--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -1,34 +1,78 @@
-//:host ::ng-deep .mdc-text-field--outlined {
-//  --mdc-outlined-text-field-container-shape: 28px;
-//  min-height: 3em;
-//}
+:host {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
 :host ::ng-deep .mat-mdc-form-field-flex {
   min-height: 3em;
-  height:3em;
+  height: 3em;
+  display: flex;
+  align-items: center;
 }
-//:host ::ng-deep .mat-mdc-form-field-infix {
-//  min-height: 3em;
-//  height:3em;
-//}
+
+:host ::ng-deep .mat-mdc-form-field-infix {
+  display: flex;
+  align-items: center;
+  padding: 0 !important;
+}
 
 .TopToolBar {
   display: flex;
-  align-items: center; /* Center items vertically */
+  align-items: center;
   flex: 1 1 auto;
 }
 
 .MainBrand {
-  width: 180px;
+  width: 11.25rem;
   background-color: grey;
 }
 
 .SearchInputField {
-  height: 60px;
+  height: 3.75rem;
   padding: 0.5em;
   width: 25em;
   border-radius: 0.5em;
-}
+  transform: translateY(0.5rem);
 
-.mdc-text-field--outlined {
-  --mdc-outlined-text-field-container-shape: 28px !important;
+  ::ng-deep {
+    .mdc-floating-label {
+      top: 50% !important;
+      transform: translateY(-50%) !important;
+      left: 0.75rem !important;
+    }
+
+    .mdc-floating-label--float-above {
+      top: 0 !important;
+      transform: translateY(-50%) scale(0.75) !important;
+      left: 0.25rem !important;  // Reduced from the default to bring it closer to the left
+    }
+
+    .mat-mdc-form-field-flex {
+      min-height: 3em;
+      height: 3em;
+      display: flex;
+      align-items: center;
+    }
+
+    .mat-mdc-form-field-infix {
+      padding: 0 !important;
+      height: 2.5rem !important;
+      display: flex !important;
+      align-items: center !important;
+    }
+
+    .mdc-text-field--outlined {
+      --mdc-outlined-text-field-container-shape: 1.75rem;
+      padding: 0 !important;
+    }
+
+    .mat-mdc-input-element {
+      margin: auto 0 !important;
+      height: 1.5rem !important;
+      margin-left: -0.5rem !important;
+    }
+  }
 }
