--- a/src/app/components/book-box/book-box.component.html
+++ b/src/app/components/book-box/book-box.component.html
@@ -1,11 +1,18 @@
-<section class="books-listing">
-  <img
-    class="books-listing-photo"
-    src="{{bookDetails.photo}}"
-    alt="{{'Photo of ' + bookDetails.bookName}}"
-    crossorigin
-  />
-  <section class="listing-book-name">{{bookDetails.bookName}}</section>
-  <section class="listing-author">{{bookDetails.bookAuthor}}</section>
-  <section [routerLink]="['/details', bookDetails.bookId]">Learn More</section>
-</section>
+<mat-card class="book-listing-card" [routerLink]="['/details', bookDetails.bookId]">
+  <mat-card-title-group>
+    <img mat-card-image class="books-listing-photo" src="{{bookDetails.photo}}"
+       alt="{{'Photo of ' + bookDetails.bookName}}">
+  </mat-card-title-group>
+  <mat-card-header>
+    <mat-card-title>{{bookDetails.bookName}}</mat-card-title>
+    <mat-card-subtitle>{{bookDetails.bookAuthor}}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button color="accent">
+      <mat-icon fontIcon="shopping_cart" matTooltip="Купити" [matTooltipShowDelay]="500"></mat-icon>
+    </button>
+    <button mat-button color="primary">
+      <mat-icon fontIcon="library_books" matTooltip="Позичити" [matTooltipShowDelay]="500"></mat-icon>
+    </button>
+  </mat-card-actions>
+</mat-card>
