--- a/src/app/components/book-box/book-box.component.scss
+++ b/src/app/components/book-box/book-box.component.scss
@@ -1,30 +1,27 @@
-.books-listing {
+.book-listing-card {
+  width: 14em;
+  cursor: pointer;
   border-radius: 1rem;
-  //padding-bottom: 1rem;
 }
 
 .books-listing-photo {
   height: 15rem;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 1rem 1rem 0 0;
+  width: 12rem;
+  border-radius: 0.7rem 0.7rem 0 0;
 }
 
-.listing-book-name {
-  //padding: 10px 20px 0 20px;
+mat-card-title-group {
+  justify-content: center;
 }
 
-.listing-author {
-  //padding: 10px 20px 20px 20px;
+.mat-mdc-button .mat-icon {
+  margin-right: 0;
 }
 
-section.books-listing a {
-  padding-left: 20px;
-  text-decoration: none;
-  color: var(--primary-color);
+.mat-mdc-card-header {
+  padding: 0 0 0 0.5rem;
 }
 
-section.books-listing a::after {
-  content: "\203A";
-  margin-left: 5px;
+.mat-mdc-card-actions {
+  padding: 0;
 }
