--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,4 +1,7 @@
-<div style="display: flex; flex-direction: row; flex-wrap: wrap">
-  <app-book-box style="margin: 0.3em" *ngFor="let b of bookingService.getAllBooksDetails()" [bookDetails]="b"></app-book-box>
+<div class="BookList">
+  <app-book-box *ngFor="let b of bookingService.getAllBooksDetails()" [bookDetails]="b"></app-book-box>
 </div>
 
+<button mat-fab color="primary" class="fab-button" (click)="openAddBookDialog()">
+  <mat-icon>add</mat-icon>
+</button>
