--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -2,11 +2,11 @@
   <img
     class="listing-photo"
     [src]="bookDetails?.photo"
-    alt="Exterior photo of {{bookDetails?.bookName}}"
+    alt="Exterior photo of {{bookDetails?.bookTitle}}"
     crossorigin
   />
   <section class="listing-description">
-    <h2 class="listing-book-name">{{bookDetails?.bookName}}</h2>
+    <h2 class="listing-book-name">{{bookDetails?.bookTitle}}</h2>
     <p class="listing-author">{{bookDetails?.bookAuthor}}</p>
   </section>
 </article>
