--- a/src/app/components/book-add/book-add.component.scss
+++ b/src/app/components/book-add/book-add.component.scss
@@ -1,9 +1,27 @@
 mat-dialog-content {
-  min-width: 22rem;
+  //padding: 0.5rem;
+  //display: block;
+  //margin-top: 0;
+  max-height: 90vh !important;
+  //overflow-y: auto;
+
   form {
     display: flex;
     flex-direction: column;
-    gap: 0.1rem;
+    //gap: 0.5rem;
+
+    .form-container {
+      display: flex;
+      gap: 0.5rem;
+      //margin-bottom: 1rem;
+
+      .column {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+    }
 
     mat-form-field {
       width: 100%;
@@ -11,7 +29,11 @@ mat-dialog-content {
   }
 }
 
+.mat-mdc-dialog-title {
+  padding-top: 0 !important;
+}
+
 mat-dialog-actions {
-  padding: 0.1rem;
-  gap: 0.1rem;
+  padding: 0.5rem;
+  gap: 0.5rem;
 }
