--- a/src/app/components/book-box/book-box.component.html
+++ b/src/app/components/book-box/book-box.component.html
@@ -1,11 +1,11 @@
 <mat-card class="book-listing-card" [routerLink]="['/details', bookDetails.bookId]">
   <mat-card-title-group>
     <img mat-card-image class="books-listing-photo" src="{{bookDetails.photo}}"
-       alt="{{'Photo of ' + bookDetails.bookName}}">
+       alt="{{'Photo of ' + bookDetails.bookTitle}}">
   </mat-card-title-group>
   <mat-card-header>
-    <mat-card-title [matTooltip]="bookDetails.bookName.length > 15 ? bookDetails.bookName : ''">
-      {{bookDetails.bookName | MaxString: 16}}
+    <mat-card-title [matTooltip]="bookDetails.bookTitle.length > 15 ? bookDetails.bookTitle : ''">
+      {{bookDetails.bookTitle | MaxString: 16}}
     </mat-card-title>
     <mat-card-subtitle [matTooltip]="bookDetails.bookAuthor.length > 19 ? bookDetails.bookAuthor : ''">
       {{bookDetails.bookAuthor | MaxString: 20}}
