--- a/src/app/components/book-add/book-add.component.html
+++ b/src/app/components/book-add/book-add.component.html
@@ -2,13 +2,35 @@
 
 <mat-dialog-content>
   <form #bookForm="ngForm">
-    <mat-form-field class="full-width">
-      <mat-label>Назва книжки</mat-label>
-      <input matInput [(ngModel)]="bookData.bookTitle" name="title" required #bookTitle="ngModel">
-      <mat-error *ngIf="bookTitle.invalid && (bookTitle.dirty || bookTitle.touched)">
-        Назва книжки має бути обов'язково
-      </mat-error>
-    </mat-form-field>
+    <div>
+      <mat-form-field class="isbn-field">
+        <mat-label>ISBN</mat-label>
+        <mat-chip-grid #isbnChipGrid>
+          @for (isbn of isbns; track isbn) {
+            <mat-chip-row (removed)="removeIsbn(isbn)">
+              {{isbn}}
+              <button matChipRemove>
+                <mat-icon>cancel</mat-icon>
+              </button>
+            </mat-chip-row>
+          }
+          <input placeholder="Додайте ISBN..."
+                 [matChipInputFor]="isbnChipGrid"
+                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                 (matChipInputTokenEnd)="addIsbn($event)"
+                 matTooltip="ISBN - до 13 цифр з дефісами"
+                 [matTooltipShowDelay]="1000">
+        </mat-chip-grid>
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <mat-label>Назва книжки</mat-label>
+        <input matInput [(ngModel)]="bookData.bookTitle" name="title" required #bookTitle="ngModel">
+        <mat-error *ngIf="bookTitle.invalid && (bookTitle.dirty || bookTitle.touched)">
+          Назва книжки має бути обов'язково
+        </mat-error>
+      </mat-form-field>
+    </div>
 
     <div>
       <mat-form-field>
@@ -46,6 +68,11 @@
       <mat-form-field>
         <mat-label>Видавництво</mat-label>
         <input matInput [(ngModel)]="bookData.bookPublisher" name="publisher">
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Кількість сторінок</mat-label>
+        <input matInput type="number" [(ngModel)]="bookData.bookNbrOfPages" name="nbrOfPages">
       </mat-form-field>
 
       <mat-form-field>
