--- a/src/app/components/book-add/book-add.component.html
+++ b/src/app/components/book-add/book-add.component.html
@@ -3,17 +3,15 @@
 <mat-dialog-content>
   <form #bookForm="ngForm">
     <div>
-      <mat-form-field class="bookISBN">
+      <mat-form-field class="bookISBN" appearance="outline">
         <mat-label>ISBN</mat-label>
         <mat-chip-grid #isbnChipGrid>
-          @for (isbn of isbns; track isbn) {
-            <mat-chip-row (removed)="removeIsbn(isbn)">
-              {{isbn}}
-              <button matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip-row>
-          }
+          <mat-chip-row *ngFor="let isbn of isbns" (removed)="removeIsbn(isbn)">
+            {{isbn}}
+            <button matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
           <input placeholder="Додайте ISBN..."
                  [matChipInputFor]="isbnChipGrid"
                  [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
@@ -23,7 +21,7 @@
         </mat-chip-grid>
       </mat-form-field>
 
-      <mat-form-field class="bookTitle">
+      <mat-form-field class="bookTitle" appearance="outline">
         <mat-label>Назва книжки</mat-label>
         <input matInput [(ngModel)]="bookData.bookTitle" name="title" required #bookTitle="ngModel">
         <mat-error *ngIf="bookTitle.invalid && (bookTitle.dirty || bookTitle.touched)">
@@ -33,26 +31,24 @@
     </div>
 
     <div>
-      <mat-form-field class="bookAuthor">
+      <mat-form-field class="bookAuthor" appearance="outline">
         <mat-label>Автор(и)</mat-label>
-        <input matInput [(ngModel)]="bookData.bookAuthor" name="author">
+        <input matInput [(ngModel)]="bookData.bookAuthor">
       </mat-form-field>
 
-      <mat-form-field class="yearPublished">
-        <mat-label>Рік видання</mat-label>
+      <mat-form-field class="yearPublished" appearance="outline">
+        <mat-label>Рік (роки) видання</mat-label>
         <mat-chip-grid #chipGrid [(ngModel)]="bookData.bookYearPublished" name="yearPublished">
-          @for (year of years(); track year.year) {
-            <mat-chip-row
+          <mat-chip-row *ngFor="let year of years()"
               (removed)="remove(year)"
               [editable]="true"
               (edited)="edit(year, $event)"
               [aria-description]="'press enter to edit ' + year.year">
-              {{year.year}}
-              <button matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip-row>
-          }
+            {{year.year}}
+            <button matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
 
           <input placeholder="Введіть рік..."
              [matChipInputFor]="chipGrid"
@@ -65,17 +61,17 @@
     </div>
 
     <div>
-      <mat-form-field class="bookPublisher">
+      <mat-form-field class="bookPublisher" appearance="outline">
         <mat-label>Видавництво</mat-label>
-        <input matInput [(ngModel)]="bookData.bookPublisher" name="publisher">
+        <input matInput [(ngModel)]="bookData.bookPublisher">
       </mat-form-field>
 
-      <mat-form-field class="bookNbrOfPages">
-        <mat-label>Кількість сторінок</mat-label>
-        <input matInput type="number" [(ngModel)]="bookData.bookNbrOfPages" name="nbrOfPages">
+      <mat-form-field class="bookNbrOfPages" appearance="outline">
+        <mat-label>К-ть сторінок</mat-label>
+        <input matInput type="number" [(ngModel)]="bookData.bookNbrOfPages">
       </mat-form-field>
 
-      <mat-form-field class="bookCover">
+      <mat-form-field class="bookCover" appearance="outline">
         <mat-label>Палітурка</mat-label>
         <input type="text"
                matInput
@@ -85,16 +81,14 @@
                name="cover"
                [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
-          @for (type of filteredCoverTypes(bookData.bookCover); track type) {
-            <mat-option [value]="type">{{type}}</mat-option>
-          }
+          <mat-option *ngFor="let type of filteredCoverTypes(bookData.bookCover)" [value]="type">{{type}}</mat-option>
         </mat-autocomplete>
       </mat-form-field>
     </div>
 
-    <mat-form-field class="bookDescription">
+    <mat-form-field class="bookDescription" appearance="outline">
       <mat-label>Опис книжки</mat-label>
-      <textarea matInput [(ngModel)]="bookData.bookDescription" name="description" rows="3"></textarea>
+      <textarea matInput [(ngModel)]="bookData.bookDescription" rows="3"></textarea>
     </mat-form-field>
   </form>
 </mat-dialog-content>
