--- a/src/app/components/book-add/book-add.component.html
+++ b/src/app/components/book-add/book-add.component.html
@@ -5,14 +5,17 @@
     <div>
       <mat-form-field class="bookISBN" appearance="outline">
         <mat-label>ISBN</mat-label>
-        <mat-chip-grid #isbnChipGrid>
-          <mat-chip-row *ngFor="let isbn of isbns" (removed)="removeIsbn(isbn)">
-            {{isbn}}
+        <mat-chip-grid #isbnChipGrid [(ngModel)]="bookData.bookISBN">
+          <mat-chip-row *ngFor="let isbn of isbns"
+              (removed)="removeISBN(isbn)"
+              [editable]="true"
+              (edited)="editISBN(isbn, $event)">
+            {{isbn.value}}
             <button matChipRemove>
               <mat-icon>cancel</mat-icon>
             </button>
           </mat-chip-row>
-          <input placeholder="Додайте ISBN..."
+          <input
                  [matChipInputFor]="isbnChipGrid"
                  [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                  (matChipInputTokenEnd)="addIsbn($event)"
@@ -40,21 +43,20 @@
         <mat-label>Рік (роки) видання</mat-label>
         <mat-chip-grid #chipGrid [(ngModel)]="bookData.bookYearPublished" name="yearPublished">
           <mat-chip-row *ngFor="let year of years()"
-              (removed)="remove(year)"
+              (removed)="removeYear(year)"
               [editable]="true"
-              (edited)="edit(year, $event)"
-              [aria-description]="'press enter to edit ' + year.year">
+              (edited)="editYear(year, $event)">
             {{year.year}}
             <button matChipRemove>
               <mat-icon>cancel</mat-icon>
             </button>
           </mat-chip-row>
 
-          <input placeholder="Введіть рік..."
+          <input
              [matChipInputFor]="chipGrid"
              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
              (matChipInputTokenEnd)="addYear($event)"
-             matTooltip="Можна ввести 4-значні числа від 1900 до 2025"
+             matTooltip="Введіть 4-значні числа від 1900 до 2025"
              [matTooltipShowDelay]="1000">
         </mat-chip-grid>
       </mat-form-field>
@@ -81,15 +83,65 @@
                name="cover"
                [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let type of filteredCoverTypes(bookData.bookCover)" [value]="type">{{type}}</mat-option>
+          <mat-option *ngFor="let type of filteredCoverTypes(bookData.bookCover)" [value]="type">
+            {{type}}
+          </mat-option>
         </mat-autocomplete>
       </mat-form-field>
     </div>
 
-    <mat-form-field class="bookDescription" appearance="outline">
-      <mat-label>Опис книжки</mat-label>
-      <textarea matInput [(ngModel)]="bookData.bookDescription" rows="3"></textarea>
-    </mat-form-field>
+    <div>
+      <mat-form-field class="bookCategories" appearance="outline">
+        <mat-label>Категорії</mat-label>
+        <mat-chip-grid #categoriesGrid [(ngModel)]="bookData.bookCategories">
+          <mat-chip-row *ngFor="let category of categories"
+              (removed)="removeCategory(category)"
+              [editable]="true"
+              (edited)="editCategory(category, $event)">
+            {{category}}
+            <button matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
+
+          <input
+             matInput
+             [matChipInputFor]="categoriesGrid"
+             [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+             (matChipInputTokenEnd)="addCategory($event)"
+             matTooltip="Категорія книжки"
+             [matTooltipShowDelay]="1000">
+        </mat-chip-grid>
+      </mat-form-field>
+
+      <mat-form-field class="bookLanguage" appearance="outline">
+        <mat-label>Мова</mat-label>
+        <mat-chip-grid #languageGrid [(ngModel)]="bookData.bookLanguage" name="language">
+          <mat-chip-row *ngFor="let lang of languages"
+              (removed)="removeLanguage(lang)"
+              [editable]="true"
+              (edited)="editLanguage(lang, $event)">
+            {{lang}}
+            <button matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
+          <input
+             [matChipInputFor]="languageGrid"
+             [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+             (matChipInputTokenEnd)="addLanguage($event)"
+             matTooltip="Введіть мову книги"
+             [matTooltipShowDelay]="1000">
+        </mat-chip-grid>
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field class="bookDescription" appearance="outline">
+        <mat-label>Опис книжки</mat-label>
+        <textarea matInput [(ngModel)]="bookData.bookDescription" rows="3"></textarea>
+      </mat-form-field>
+    </div>
   </form>
 </mat-dialog-content>
 
