--- a/src/app/components/book-add/book-add.component.html
+++ b/src/app/components/book-add/book-add.component.html
@@ -6,7 +6,7 @@
       <mat-form-field class="bookISBN" appearance="outline">
         <mat-label>ISBN</mat-label>
         <mat-chip-grid #isbnChipGrid [(ngModel)]="bookData.bookISBN">
-          <mat-chip-row *ngFor="let isbn of isbns"
+          <mat-chip-row *ngFor="let isbn of isbns()"
               (removed)="removeISBN(isbn)"
               [editable]="true"
               (edited)="editISBN(isbn, $event)">
